infra/apps/traefik/hello-deployment.yaml
# infra/apps/traefik/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: hashicorp/http-echo
        args:
          - "-text=¡Hola desde Minikube!"
        ports:
          - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: traefik
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: hello
