infra/apps/traefik/hello-http-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-http
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hello.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: hello
          port: 80
