infra/apps/traefik/hello-ingressroute.yaml
# infra/apps/traefik/hello-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`hello.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: hello
          port: 80
  tls:
    certResolver: le
